# airflow-basic-operator

./: .gitignore  Makefile  README.md  pyproject.toml
dags/: sample_001.py
dags/dataframe/: mycode.py
plugins/fisia/financeiro/operators/: pandas_to_bigquery.py
plugins/fisia/financeiro/operators/templates/: pandas_to_bigquery.j2
plugins/fisia/operators/: pandas_to_bigquery.py
plugins/fisia/operators/templates/: pandas_to_bigquery.j2
